--- a/countries.html
+++ b/countries.html
@@ -1,44 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Study Destinations — USA, UK, Canada, Europe & Middle East | Zhev Education</title>
-  <meta name="description" content="Explore study destinations: USA, UK, Canada, Ireland, Australia, Europe and Middle East. Programs include MS in CS, MBA, MBBS, Architecture, Fashion, Hospitality and Game Design.">
-  <link rel="canonical" href="https://zheveducation.com/countries.html">
 
-  <link rel="icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <!-- FAVICON -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+
+  <!-- SEO -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Study Abroad Destinations – USA, UK, Canada, Europe, Australia | Zhev Education</title>
+  <meta name="description" content="Explore top study abroad destinations: USA, UK, Canada, Australia, Ireland, Germany, France, UAE, Netherlands and more. Discover programs in Computer Science, Business, Engineering, Hospitality, Fashion, Design, Sports, Music, MBBS and emerging fields.">
+  <meta name="keywords" content="study abroad, study in USA, study in Canada, study in UK, Germany universities, European study abroad, UAE education, MBBS abroad, hotel management, fashion design abroad, study architecture, study business abroad">
+  <meta name="author" content="Zhev Education Consultancy">
+
+  <link rel="stylesheet" href="assets/style.css">
+
   <style>
-    :root{--primary:#2F3A56;--muted:#6b7280;--maxw:1100px}
-    body{margin:0;font-family:Inter;color:#111}
-    header{padding:18px;border-bottom:1px solid #eef0f5}
-    .nav{max-width:var(--maxw);margin:0 auto;padding:0 20px;display:flex;justify-content:space-between;align-items:center}
-    .page{max-width:var(--maxw);margin:0 auto;padding:40px 20px}
-    h1{font-family:Poppins;color:var(--primary)}
-    .list{display:grid;grid-template-columns:repeat(2,1fr);gap:18px;margin-top:18px}
-    .item{background:#fff;border:1px solid #eef0f5;padding:18px;border-radius:10px}
-    @media(max-width:900px){.list{grid-template-columns:1fr}}
+    main { padding: 20px; max-width: 1000px; margin: auto; }
+    h1, h2 { color: #2F3A56; }
+    p { line-height: 1.7; color: #333; }
+
+    .country-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      margin-top: 25px;
+    }
+
+    .country-box {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      border: 1px solid #e6e6e6;
+      line-height: 1.6;
+    }
+
+    .country-box h3 {
+      color: #2F3A56;
+      margin-top: 0;
+      font-size: 20px;
+    }
+
+    @media(max-width: 768px) {
+      .country-grid { grid-template-columns: 1fr; }
+    }
+
+    /* NAV / HEADER (Same as index & services) */
+    header {
+      background: #2F3A56;
+      padding: 15px;
+      color: white;
+    }
+
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .brand {
+      font-size: 20px;
+      font-weight: 600;
+      color: white;
+    }
+
+    nav a {
+      color: white;
+      margin-left: 20px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .hamburger {
+      display: none;
+      font-size: 28px;
+      cursor: pointer;
+      color: white;
+    }
+
+    @media(max-width: 768px) {
+      nav {
+        display: none;
+        flex-direction: column;
+        background: #2F3A56;
+        width: 100%;
+        padding: 10px;
+      }
+      nav a {
+        display: block;
+        margin: 10px 0;
+      }
+      .hamburger {
+        display: block;
+      }
+    }
   </style>
+
+  <script>
+    function toggleNav() {
+      const nav = document.getElementById("mobileNav");
+      nav.style.display = (nav.style.display === "block") ? "none" : "block";
+    }
+  </script>
+
 </head>
+
 <body>
-  <header><div class="nav"><div class="brand" style="font-family:Poppins;color:var(--primary)">Zhev Education</div><nav aria-label="Main nav"><a href="index.html">Home</a> <a href="about.html">About</a> <a href="services.html">Services</a> <a href="countries.html">Countries</a> <a href="contact.html">Contact</a></nav></div></header>
 
-  <main class="page">
-    <h1>Study Destinations</h1>
-    <p style="color:var(--muted)">Top choices and offbeat programs. Use these as starting points for your shortlist and speak to us for custom plans.</p>
+<!-- HEADER -->
+<header>
+  <div class="nav">
+    <div class="brand">Zhev Education</div>
 
-    <div class="list">
-      <div class="item"><strong>USA</strong><p style="color:var(--muted);margin:8px 0">STEM & research focus, OPT for work experience. Programs: MS in CS, AI, Data Science, MBA, Film, Music, Sports Management.</p></div>
-      <div class="item"><strong>Canada</strong><p style="color:var(--muted);margin:8px 0">PR-friendly, co-op and affordable options. Programs: CS, Hospitality, Nursing, Architecture.</p></div>
-      <div class="item"><strong>UK & Ireland</strong><p style="color:var(--muted);margin:8px 0">Short Masters, strong industry ties. Programs: Management, Design, Film.</p></div>
-      <div class="item"><strong>Europe</strong><p style="color:var(--muted);margin:8px 0">Affordable education in Germany, Netherlands, Italy — Engineering, Fashion, Architecture.</p></div>
-      <div class="item"><strong>Middle East</strong><p style="color:var(--muted);margin:8px 0">Emerging campuses: Hospitality, Aviation, Digital Marketing, Healthcare.</p></div>
-      <div class="item"><strong>Offbeat programs</strong><p style="color:var(--muted);margin:8px 0">Fashion, Music, Game Design, Culinary Arts, Hair & Beauty, Sports Science, MBBS.</p></div>
+    <span class="hamburger" onclick="toggleNav()">☰</span>
+
+    <nav id="mobileNav">
+      <a href="index.html" onclick="toggleNav()">Home</a>
+      <a href="about.html" onclick="toggleNav()">About</a>
+      <a href="services.html" onclick="toggleNav()">Services</a>
+      <a href="countries.html" onclick="toggleNav()">Countries</a>
+      <a href="contact.html" onclick="toggleNav()">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<!-- PAGE CONTENT -->
+<main class="page">
+  <h1>Top Study Abroad Destinations</h1>
+  <p>
+    Choose from globally recognised education destinations, offering excellent academic programs, post-study work opportunities, and strong job markets. Whether you're planning for **Computer Science, MBA, Data Science, Engineering, Hospitality, Fashion, MBBS, or Creative Arts**, we help you select the right country and program.
+  </p>
+
+  <div class="country-grid">
+
+    <div class="country-box">
+      <h3>USA</h3>
+      <p>Top programs: MS in CS, Data Science, AI/ML, MBA, Finance, Engineering, Film, Music, Sports Science.</p>
     </div>
 
-    <div class="sr-only" aria-hidden="true">study destinations USA Canada UK Europe, ms in cs abroad, fashion design italy, hospitality france, game design netherlands</div>
-  </main>
+    <div class="country-box">
+      <h3>Canada</h3>
+      <p>Popular for PR pathways, PG Diplomas, Computer Engineering, Healthcare, Business Analytics, Hospitality.</p>
+    </div>
 
-  <footer style="padding:28px 20px;text-align:center;color:#6b7280">© 2025 Zhev Education Abroad Consultancy</footer>
+    <div class="country-box">
+      <h3>United Kingdom</h3>
+      <p>1-year Master's programs, strong business schools, design, fashion, media communication and law.</p>
+    </div>
+
+    <div class="country-box">
+      <h3>Ireland</h3>
+      <p>STEM-focused programs, excellent CS opportunities, Data Science, Cybersecurity and tech careers.</p>
+    </div>
+
+    <div class="country-box">
+      <h3>Australia</h3>
+      <p>Best for Nursing, Engineering, Architecture, Sports Science, Hospitality Management and teaching.</p>
+    </div>
+
+    <div class="country-box">
+      <h3>New Zealand</h3>
+      <p>Safe, affordable and known for engineering, agriculture, business, hospitality & post-study options.</p>
+    </div>
+
+    <div class="country-box">
+      <h3>Germany</h3>
+      <p>Low-cost education, engineering, automotive, robotics, architecture, music & applied sciences.</p>
+    </div>
+
+    <div class="country-box">
+      <h3>France</h3>
+      <p>Luxury brand management, fashion design, culinary arts, hospitality, business & arts programs.</p>
+    </div>
+
+    <div class="country-box">
+      <h3>Netherlands</h3>
+      <p>Research universities, psychology, ecology, engineering, game design and international business.</p>
+    </div>
+
+    <div class="country-box">
+      <h3>Italy</h3>
+      <p>Architecture, design, fine arts, fashion styling, archaeology, history and cultural studies.</p>
+    </div>
+
+    <div class="country-box">
+      <h3>Spain</h3>
+      <p>Hospitality, tourism, sports management, linguistics, performing arts, football training programs.</p>
+    </div>
+
+    <div class="country-box">
+      <h3>UAE (Dubai)</h3>
+      <p>Business programs, hotel management, logistics, aviation, luxury marketing and modern campuses.</p>
+    </div>
+
+  </div>
+</main>
+
+<!-- FOOTER -->
+<footer style="background:#2F3A56; color:white; text-align:center; padding:15px; margin-top:30px;">
+  © 2025 Zhev Education Abroad Consultancy — info@zheveducation.com • +91 95945 38979
+</footer>
+
 </body>
 </html>
